Refactor vacature and nieuws pages: dynamic data and enhanced SEO